<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/city_name"
            android:id="@+id/tv_city_name"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:textSize="13sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintLeft_toLeftOf="parent"
            android:textSize="11sp"
            android:layout_marginTop="5dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_city_name"
            android:text="@string/weather_report"
            android:id="@+id/tv_weather_report"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintLeft_toLeftOf="parent"
            android:textSize="26sp"
            android:layout_marginTop="5dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_weather_report"
            android:text="@string/temperature"
            android:id="@+id/tv_city_temperature"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tv_city_temperature"
            app:layout_constraintLeft_toLeftOf="parent"
            android:textStyle="bold"
            android:padding="6dp"
            android:text="@string/day_details"
            android:id="@+id/tv_day_details"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_city_temperature"
            app:layout_constraintRight_toRightOf="parent"
            android:textStyle="bold"
            android:padding="6dp"
            android:text="@string/temp_val"
            android:id="@+id/tv_day_temp_details"/>
        <View
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@color/gray_scale"
            android:layout_marginTop="6dp"
            android:id="@+id/view_top_rv_hor"
            app:layout_constraintTop_toBottomOf="@+id/tv_day_details"/>
        <android.support.v7.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_top_rv_hor"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/rv_horizontal"/>
        <View
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@color/gray_scale"
            android:layout_marginTop="6dp"
            android:id="@+id/view_bottom_rv_hor"
            app:layout_constraintTop_toBottomOf="@+id/rv_horizontal"/>
        <android.support.v7.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_bottom_rv_hor"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/rv_vertical"/>
        <View
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@color/gray_scale"
            android:layout_marginTop="6dp"
            android:id="@+id/view_bottom_rv_ver"
            app:layout_constraintTop_toBottomOf="@+id/rv_vertical"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/view_bottom_rv_ver"
            android:text="@string/weather_summary"
            android:id="@+id/tv_weather_summary"
            app:layout_constraintLeft_toLeftOf="parent"
            android:padding="4dp"
            app:layout_constraintRight_toRightOf="parent"
            android:gravity="center"/>
        <View
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@color/gray_scale"
            android:layout_marginTop="6dp"
            android:id="@+id/view_bottom_tv_weather"
            app:layout_constraintTop_toBottomOf="@+id/tv_weather_summary"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/tv_sunrise"
            android:gravity="center"
            android:padding="3dp"
            app:layout_constraintTop_toBottomOf="@+id/view_bottom_tv_weather"
            android:text="@string/sunrise_time"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/tv_sunset"
            android:gravity="center"
            android:padding="3dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_sunrise"
            android:text="@string/sunset_time"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/tv_humidity"
            android:gravity="center"
            android:padding="3dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_sunset"
            android:text="@string/humidity"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/tv_wind"
            android:gravity="center"
            android:padding="3dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_humidity"
            android:text="@string/wind"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/tv_precipitation"
            android:gravity="center"
            android:padding="3dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_wind"
            android:text="@string/precipitation"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/tv_pressure"
            android:gravity="center"
            android:padding="3dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_precipitation"
            android:text="@string/pressure"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/tv_uv_index"
            android:gravity="center"
            android:padding="3dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="5dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_pressure"
            android:text="@string/uv_index"/>
    </android.support.constraint.ConstraintLayout>
</ScrollView>